tests/compile-fail/reading_half_a_pointer.stderr
error: unsupported operation: unable to turn pointer into raw bytes
  --> $DIR/reading_half_a_pointer.rs:27:18
   |
27 |         let _x = *d_alias; //~ ERROR unable to turn pointer into raw bytes
   |                  ^^^^^^^^ unable to turn pointer into raw bytes
   |
   = help: this is likely not a bug in the program; it indicates that the program performed an operation that the interpreter does not support
           
   = note: inside `main` at $DIR/reading_half_a_pointer.rs:27:18

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

